--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "keywords": [],
   "author": "",
-  "type": "module",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/load-files": "^7.0.0",
+    "@graphql-tools/schema": "^10.0.3",
+    "apollo-server-express": "^3.13.0",
     "express": "^4.18.2",
+    "graphiql": "^3.1.1",
     "graphql": "^16.8.1",
     "graphql-http": "^1.22.0"
   }
